k8/node-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-api
  namespace: development
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: node-api
  type: ClusterIP
