k8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-api-ingress
  namespace: development
  annotations:  
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: "assignment24.xyz"
      http:
        paths:  
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-api
                port:
                  number: 80
